# pyxed

./: README.md  image.py  main.py  parsearg.py  pyproject.toml  util.py
ops/: convert.py  crop.py  metadata.py  resize.py
transform/: rotate.py  transpose.py
