[project]
name = "pyxed"
version = "0.1.0"
description = "Basic image editing cli tool"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pillow>=12.0.0",
    "rich>=14.2.0",
]

[project.scripts]
pyxed = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py"]
